# MCP-Metrics

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  Makefile  README.md  demo.sh  docker-compose.yml  prd.md  pyproject.toml  setup-gbrain-smoke-test-1782681143.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/: __init__.py  config.py  database.py  main.py  scheduler.py
backend/src/api/: auth.py
backend/src/mcp/: __init__.py  server.py
backend/src/models/: __init__.py  audit_log.py  blueprint_version.py  health_check_result.py  site.py
backend/src/observability/: logging.py
backend/src/plugins/: __init__.py  loader.py
backend/src/services/: __init__.py  audit_service.py  blueprint_service.py  browser_controller.py  ga4_service.py  (+12 more)
backend/tests/: conftest.py  test_bigquery_auth.py  test_blueprint_service.py  test_browser_controller.py  test_consent_env.py  test_ga4_service.py  test_google_auth.py  test_governance.py  test_gtm_service.py  test_health.py  test_health_service.py  test_models.py  test_plugins.py  test_sites_api.py
cli/: analytics_cli.py
config/: env.example  gemini-fastmcp.example.sh  mcp-claude.example.json
docs/: BROWSER_CONTROLLER.md
docs/blueprints/: content.yaml  ecommerce.yaml  preview-verification.yaml  saas.yaml  web-vitals.yaml
docs/plans/: sprint-13-mobile-support.md  sprint-14-analytics-audit.md
docs/recipes/: content-setup.md  ecommerce-setup.md  saas-setup.md
web-ui/: index.html  package.json
web-ui/src/: App.tsx  api.ts  index.css
(+15 files in other folders)
