[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-mcp"
version = "0.1.0"
description = "One-click GA4 + GTM analytics automation with CLI, REST API, and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.154.0",
    "google-analytics-data>=0.18.0",
    "httpx>=0.28.0",
    "typer[all]>=0.15.0",
    "pyyaml>=6.0.2",
    "fastmcp>=2.0.0",
    "apscheduler>=3.10.4",
    "structlog>=24.4.0",
    "python-multipart>=0.0.17",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

[project.scripts]
analytics-mcp = "cli.analytics_cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src", "."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"backend/alembic/env.py" = ["E402", "I001"]
"backend/alembic/versions/*.py" = ["E501"]
